projects/batfish/src/test/resources/org/batfish/representation/aws/test-nat-gateway/aws_configs/InternetGateways.json
{
 "InternetGateways": [
  {
   "Attachments": [
    {
     "State": "available",
     "VpcId": "vpc-0008a7b45e3ddf1dd"
    }
   ],
   "InternetGatewayId": "igw-071753b9c23d8a9b2",
   "OwnerId": "554773406868",
   "Tags": [
    {
     "Key": "Name",
     "Value": "vpc_a"
    }
   ]
  }
 ]
}
