projects/batfish/src/test/resources/org/batfish/representation/aws/test-nat-gateway/aws_configs/Reservations.json
{
 "Reservations": [
  {
   "Groups": [],
   "Instances": [
    {
     "AmiLaunchIndex": 0,
     "Architecture": "x86_64",
     "BlockDeviceMappings": [
      {
       "DeviceName": "/dev/xvda",
       "Ebs": {
        "AttachTime": "2020-03-03 01:21:04+00:00",
        "DeleteOnTermination": true,
        "Status": "attached",
        "VolumeId": "vol-0916e2f3289f532e1"
       }
      }
     ],
     "CapacityReservationSpecification": {
      "CapacityReservationPreference": "open"
     },
     "ClientToken": "",
     "CpuOptions": {
      "CoreCount": 1,
      "ThreadsPerCore": 1
     },
     "EbsOptimized": false,
     "EnaSupport": true,
     "HibernationOptions": {
      "Configured": false
     },
     "Hypervisor": "xen",
     "ImageId": "ami-02ccb28830b645a41",
     "InstanceId": "i-0b31b509174d7f5de",
     "InstanceType": "t2.micro",
     "KeyName": "publicKey",
     "LaunchTime": "2020-03-03 01:21:04+00:00",
     "Monitoring": {
      "State": "disabled"
     },
     "NetworkInterfaces": [
      {
       "Association": {
        "IpOwnerId": "amazon",
        "PublicDnsName": "ec2-18-216-129-140.us-east-2.compute.amazonaws.com",
        "PublicIp": "18.216.129.140"
       },
       "Attachment": {
        "AttachTime": "2020-03-03 01:21:03+00:00",
        "AttachmentId": "eni-attach-05fca753605c9df43",
        "DeleteOnTermination": true,
        "DeviceIndex": 0,
        "Status": "attached"
       },
       "Description": "",
       "Groups": [
        {
         "GroupId": "sg-0253af84ae6485905",
         "GroupName": "terraform-20200303012059260200000002"
        }
       ],
       "InterfaceType": "interface",
       "Ipv6Addresses": [],
       "MacAddress": "06:18:ef:b9:a5:74",
       "NetworkInterfaceId": "eni-068fb5a0a9a57f23c",
       "OwnerId": "554773406868",
       "PrivateDnsName": "ip-10-1-250-116.us-east-2.compute.internal",
       "PrivateIpAddress": "10.1.250.116",
       "PrivateIpAddresses": [
        {
         "Association": {
          "IpOwnerId": "amazon",
          "PublicDnsName": "ec2-18-216-129-140.us-east-2.compute.amazonaws.com",
          "PublicIp": "18.216.129.140"
         },
         "Primary": true,
         "PrivateDnsName": "ip-10-1-250-116.us-east-2.compute.internal",
         "PrivateIpAddress": "10.1.250.116"
        }
       ],
       "SourceDestCheck": true,
       "Status": "in-use",
       "SubnetId": "subnet-0428892a357fa1f94",
       "VpcId": "vpc-0008a7b45e3ddf1dd"
      }
     ],
     "Placement": {
      "AvailabilityZone": "us-east-2b",
      "GroupName": "",
      "Tenancy": "default"
     },
     "PrivateDnsName": "ip-10-1-250-116.us-east-2.compute.internal",
     "PrivateIpAddress": "10.1.250.116",
     "ProductCodes": [],
     "PublicDnsName": "ec2-18-216-129-140.us-east-2.compute.amazonaws.com",
     "PublicIpAddress": "18.216.129.140",
     "RootDeviceName": "/dev/xvda",
     "RootDeviceType": "ebs",
     "SecurityGroups": [
      {
       "GroupId": "sg-0253af84ae6485905",
       "GroupName": "terraform-20200303012059260200000002"
      }
     ],
     "SourceDestCheck": true,
     "State": {
      "Code": 16,
      "Name": "running"
     },
     "StateTransitionReason": "",
     "SubnetId": "subnet-0428892a357fa1f94",
     "Tags": [
      {
       "Key": "Name",
       "Value": "Jump Host"
      }
     ],
     "VirtualizationType": "hvm",
     "VpcId": "vpc-0008a7b45e3ddf1dd"
    }
   ],
   "OwnerId": "554773406868",
   "ReservationId": "r-0c9f3ce4f49168e64"
  },
  {
   "Groups": [],
   "Instances": [
    {
     "AmiLaunchIndex": 0,
     "Architecture": "x86_64",
     "BlockDeviceMappings": [
      {
       "DeviceName": "/dev/xvda",
       "Ebs": {
        "AttachTime": "2020-03-03 01:21:05+00:00",
        "DeleteOnTermination": true,
        "Status": "attached",
        "VolumeId": "vol-0668a0e5a2b9737b9"
       }
      }
     ],
     "CapacityReservationSpecification": {
      "CapacityReservationPreference": "open"
     },
     "ClientToken": "",
     "CpuOptions": {
      "CoreCount": 1,
      "ThreadsPerCore": 1
     },
     "EbsOptimized": false,
     "EnaSupport": true,
     "HibernationOptions": {
      "Configured": false
     },
     "Hypervisor": "xen",
     "ImageId": "ami-02ccb28830b645a41",
     "InstanceId": "i-0a73a1a6021c03ddb",
     "InstanceType": "t2.micro",
     "KeyName": "publicKey",
     "LaunchTime": "2020-03-03 01:21:04+00:00",
     "Monitoring": {
      "State": "disabled"
     },
     "NetworkInterfaces": [
      {
       "Attachment": {
        "AttachTime": "2020-03-03 01:21:04+00:00",
        "AttachmentId": "eni-attach-0f7b2f0b940738a08",
        "DeleteOnTermination": true,
        "DeviceIndex": 0,
        "Status": "attached"
       },
       "Description": "",
       "Groups": [
        {
         "GroupId": "sg-0253af84ae6485905",
         "GroupName": "terraform-20200303012059260200000002"
        }
       ],
       "InterfaceType": "interface",
       "Ipv6Addresses": [],
       "MacAddress": "06:77:04:fd:d3:14",
       "NetworkInterfaceId": "eni-0cbd69297d26de519",
       "OwnerId": "554773406868",
       "PrivateDnsName": "ip-10-1-20-173.us-east-2.compute.internal",
       "PrivateIpAddress": "10.1.20.173",
       "PrivateIpAddresses": [
        {
         "Primary": true,
         "PrivateDnsName": "ip-10-1-20-173.us-east-2.compute.internal",
         "PrivateIpAddress": "10.1.20.173"
        }
       ],
       "SourceDestCheck": true,
       "Status": "in-use",
       "SubnetId": "subnet-02ff259e663e9613e",
       "VpcId": "vpc-0008a7b45e3ddf1dd"
      }
     ],
     "Placement": {
      "AvailabilityZone": "us-east-2b",
      "GroupName": "",
      "Tenancy": "default"
     },
     "PrivateDnsName": "ip-10-1-20-173.us-east-2.compute.internal",
     "PrivateIpAddress": "10.1.20.173",
     "ProductCodes": [],
     "PublicDnsName": "",
     "RootDeviceName": "/dev/xvda",
     "RootDeviceType": "ebs",
     "SecurityGroups": [
      {
       "GroupId": "sg-0253af84ae6485905",
       "GroupName": "terraform-20200303012059260200000002"
      }
     ],
     "SourceDestCheck": true,
     "State": {
      "Code": 16,
      "Name": "running"
     },
     "StateTransitionReason": "",
     "SubnetId": "subnet-02ff259e663e9613e",
     "Tags": [
      {
       "Key": "Name",
       "Value": "test20"
      }
     ],
     "VirtualizationType": "hvm",
     "VpcId": "vpc-0008a7b45e3ddf1dd"
    }
   ],
   "OwnerId": "554773406868",
   "ReservationId": "r-01c74ce6b0a9858f3"
  },
  {
   "Groups": [],
   "Instances": [
    {
     "AmiLaunchIndex": 0,
     "Architecture": "x86_64",
     "BlockDeviceMappings": [
      {
       "DeviceName": "/dev/xvda",
       "Ebs": {
        "AttachTime": "2020-03-03 01:21:04+00:00",
        "DeleteOnTermination": true,
        "Status": "attached",
        "VolumeId": "vol-02f2c105a117464e5"
       }
      }
     ],
     "CapacityReservationSpecification": {
      "CapacityReservationPreference": "open"
     },
     "ClientToken": "",
     "CpuOptions": {
      "CoreCount": 1,
      "ThreadsPerCore": 1
     },
     "EbsOptimized": false,
     "EnaSupport": true,
     "HibernationOptions": {
      "Configured": false
     },
     "Hypervisor": "xen",
     "ImageId": "ami-02ccb28830b645a41",
     "InstanceId": "i-0a128d26e59be60f3",
     "InstanceType": "t2.micro",
     "KeyName": "publicKey",
     "LaunchTime": "2020-03-03 01:21:04+00:00",
     "Monitoring": {
      "State": "disabled"
     },
     "NetworkInterfaces": [
      {
       "Attachment": {
        "AttachTime": "2020-03-03 01:21:04+00:00",
        "AttachmentId": "eni-attach-0649ab1065ffe4772",
        "DeleteOnTermination": true,
        "DeviceIndex": 0,
        "Status": "attached"
       },
       "Description": "",
       "Groups": [
        {
         "GroupId": "sg-0253af84ae6485905",
         "GroupName": "terraform-20200303012059260200000002"
        }
       ],
       "InterfaceType": "interface",
       "Ipv6Addresses": [],
       "MacAddress": "06:18:1c:80:ae:ec",
       "NetworkInterfaceId": "eni-0e4ce6a7777b9bff8",
       "OwnerId": "554773406868",
       "PrivateDnsName": "ip-10-1-1-98.us-east-2.compute.internal",
       "PrivateIpAddress": "10.1.1.98",
       "PrivateIpAddresses": [
        {
         "Primary": true,
         "PrivateDnsName": "ip-10-1-1-98.us-east-2.compute.internal",
         "PrivateIpAddress": "10.1.1.98"
        }
       ],
       "SourceDestCheck": true,
       "Status": "in-use",
       "SubnetId": "subnet-06f469bcee42e408e",
       "VpcId": "vpc-0008a7b45e3ddf1dd"
      }
     ],
     "Placement": {
      "AvailabilityZone": "us-east-2b",
      "GroupName": "",
      "Tenancy": "default"
     },
     "PrivateDnsName": "ip-10-1-1-98.us-east-2.compute.internal",
     "PrivateIpAddress": "10.1.1.98",
     "ProductCodes": [],
     "PublicDnsName": "",
     "RootDeviceName": "/dev/xvda",
     "RootDeviceType": "ebs",
     "SecurityGroups": [
      {
       "GroupId": "sg-0253af84ae6485905",
       "GroupName": "terraform-20200303012059260200000002"
      }
     ],
     "SourceDestCheck": true,
     "State": {
      "Code": 16,
      "Name": "running"
     },
     "StateTransitionReason": "",
     "SubnetId": "subnet-06f469bcee42e408e",
     "Tags": [
      {
       "Key": "Name",
       "Value": "test1"
      }
     ],
     "VirtualizationType": "hvm",
     "VpcId": "vpc-0008a7b45e3ddf1dd"
    }
   ],
   "OwnerId": "554773406868",
   "ReservationId": "r-0d24b4f8a7b96ace3"
  }
 ]
}
